Updated informational text

--- a/project_3.ipynb
+++ b/project_3.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# In your notebook, please summarize your method for:\n",
     "\n",
-    "- Which response to pick for \"correct\" option\n",
+    "- Which response to pick for the \"correct\" option\n",
     "\n",
     "\"Correct\" options are found by cross-referencing the correct answer (given in the Questions csv file) with students' answers (given in the Answers file). The two data sets are cross-referenced, and if a student's answer matches the correct answer given, then their explanation is saved as a \"correct\" option.\n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "- How do you pick options for students who get the question wrong initially? (Retry options), if any\n",
     "\n",
-    "The output json file has one correct option and up to six incorrect options per question. If a student tries to retry the question/quiz, the frontend is given the option to choose from one of these six incorrect options, allowing up to one unique retry for each question in the data set. It was assumed on the backend that the frontend side of the application would slice the given array between indicies [1, 3] inclusive for the first question attempt and [4, 6] inclusive for the second.\n",
+    "The output json file has one correct option and up to six incorrect options per question. If a student tries to retry the question/quiz, the frontend is given the option to choose from one of these six incorrect options, allowing up to one unique retry for each question in the data set. The frontend takes this data and for each retry, selects the correct answer option with three randomly chosen incorrect options.\n",
     "\n",
     "- Feedback shown immediately after students attempt a question.\n",
     "\n",
